官网改版第一稿

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   },
   "devDependencies": {
     "express-handlebars": "^3.0.0",
+    "mysql2": "^1.6.4",
     "nodemon": "^1.18.3",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "sequelize": "^4.42.0"
   }
 }
