--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "pm2": "pm2 start ./bin/www --name website"
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
@@ -17,6 +18,7 @@
     "express-handlebars": "^3.0.0",
     "mysql2": "^1.6.4",
     "nodemon": "^1.18.3",
+    "pm2": "^3.2.9",
     "request": "^2.88.0",
     "sequelize": "^4.42.0"
   }
